FIX:sweetAlert z-index change

--- a/Frontend/farmding/src/index.css
+++ b/Frontend/farmding/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
-  font-family: 'NanumSquareRoundEB', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "NanumSquareRoundEB", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +10,8 @@ body {
 @font-face {
   font-family: "NanumSquareRoundEB";
   src: url("../public/Assets/fonts/NanumSquareRoundEB.ttf");
+}
+.swal2-container.swal2-backdrop-show,
+.swal2-container.swal2-noanimation {
+  z-index: 11000;
 }
